[package]
name = "aksr"
version = "0.0.5"
edition = "2021"
rust-version = "1.68"
description = "A Rust derive macro designed to automatically generate getter and setter methods for both named and tuple structs."
repository = "https://github.com/jamjamjon/aksr"
authors = ["Jamjamjon <xxyydzml@outlook.com>"]
license = "MIT"
readme = "README.md"
exclude = ["tests/*", "examples/*"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
